fix(component-testing): Align headers correctly (#15641)
* fix(component-testing): Align headers correctly

* fix(component-testing): Correctly exit process in run mode for compilation errors

* Revert "fix(component-testing): Correctly exit process in run mode for compilation errors"

This reverts commit 45f8e72101cc6aeb1b46273193e685a629eaf1b2.

--- a/packages/runner-ct/src/app/RunnerCt.module.scss
+++ b/packages/runner-ct/src/app/RunnerCt.module.scss
@@ -26,6 +26,7 @@ $box-shadow-closest: 0px 0px 5px rgba(0, 0, 0, 0.4);
     left: unset;
     right: unset;
     bottom: unset;
+    min-height: $runner-ct-header-height;
   }
 
   .size-container {
